# ML_LAPTOPS

./: README.MD  pyproject.toml
Data/Processed/: Data_Clean.parquet  PcDataClean.parquet  test_clean.csv  trainClean.csv  train_clean.csv  train_clean_label.csv
Notebooks/: Modelo_ML_PC.ipynb  data_loading_cleaning.ipynb  data_loading_cleaning_test.ipynb  data_loading_cleaning_train.ipynb  test_clean_label.csv
Scripts/: __init__.py
