[tool.poetry]
name = "analisis ordenadores"
version = "0.1.0"
description = "Analisis Exploratorio de Datos de Ordenadores de distintas marcas."
authors = ["abdonrb <abdondjesusramirez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^19.0.0"
fastparquet = "^2024.11.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
